--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,22 @@ services:
     container_name: discord_bot
     build: .
     restart: unless-stopped
+    env_file:
+      - .env
+    command: ["python", "bot.py"]
     environment:
       TIMEZONE: "Europe/Rome"
-      TOKEN: "MTQ2MjkzNjU3MjYxMjg0MTY3Mg.GYXHRv.PL8fg5ZNNNY4n8Sth3Nok3xzaWyQAD51BbQHvQ"
-      SOURCE_CHANNEL_ID: "808997837014302750"
-      TARGET_CHANNEL_ID: "1463307327787499530"
-      ROLE_ID: "623996167990280213"
+
+  upload-audio:
+    container_name: discord_upload_audio
+    build: .
+    restart: "no"
+    env_file:
+      - .env
+    environment:
+      MULTIMEDIA_DIR: "multimedia"
+      MAX_UPLOAD_SIZE: "8388608"
+      DELAY_SECONDS: "1.0"
+    volumes:
+      - ./multimedia:/app/multimedia
+    command: ["python", "upload_screenshots.py"]
